--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v3-sdk"
-version = "3.9.0"
+version = "3.10.0"
 edition = "2021"
 rust-version = "1.82"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
@@ -16,9 +16,9 @@ exclude = [".github", ".gitignore", "rustfmt.toml"]
 all-features = true
 
 [dependencies]
-alloy = { version = "0.13", optional = true, default-features = false, features = ["contract"] }
-alloy-primitives = { version = "0.8", default-features = false }
-alloy-sol-types = { version = "0.8", default-features = false }
+alloy = { version = "1.0.1", optional = true, default-features = false, features = ["contract"] }
+alloy-primitives = { version = "1.0", default-features = false }
+alloy-sol-types = { version = "1.0", default-features = false }
 anyhow = { version = "1.0", optional = true }
 base64 = { version = "0.22", optional = true, default-features = false }
 derive_more = { version = "2", default-features = false, features = ["deref", "from"] }
@@ -29,14 +29,14 @@ once_cell = { version = "1.20", default-features = false, features = ["critical-
 regex = { version = "1.11", optional = true }
 serde_json = { version = "1.0", optional = true, default-features = false }
 thiserror = { version = "2", default-features = false }
-uniswap-lens = { version = "0.13", optional = true }
-uniswap-sdk-core = ">=3.6.2, <3.7.0"
+uniswap-lens = { version = "0.15", optional = true }
+uniswap-sdk-core = "3.7.1"
 
 [dev-dependencies]
-alloy = { version = "0.13", default-features = false, features = ["provider-anvil-node", "reqwest", "signer-local"] }
+alloy = { version = "1.0.1", default-features = false, features = ["provider-anvil-node", "reqwest", "signer-local"] }
 criterion = "0.5.1"
 dotenv = "0.15.0"
-tokio = { version = "1.44", features = ["full"] }
+tokio = { version = "1.45", features = ["full"] }
 uniswap_v3_math = "0.6.0"
 
 [features]
